# LiveDraw

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Components/: UIElement.h
src/Components/Button/: Button.cpp  Button.h
src/Components/UICollection/: UICollection.cpp  UICollection.h
